ZumZumFinancials_Dev1/src/objects/General_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Current_Document_Number__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>Current Document Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Order</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ledger Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconcile Transaction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Starting_Document_No__c</fullName>
        <label>Starting Document No</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>General Setup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>